Expand canvas size

--- a/styles/controls.css
+++ b/styles/controls.css
@@ -10,6 +10,7 @@
     -ms-user-select: none;
     -o-user-select: none;
     cursor: pointer;
+    pointer-events: none;
 }
 .toggler {
     padding-right: 20px;
