--- a/styles/controls.css
+++ b/styles/controls.css
@@ -4,6 +4,8 @@
 
 .icon {
     display: block;
+    width: 20px;
+    height: 20px;
     user-select: none;
     -webkit-user-select: none;
     -moz-user-select: none;
@@ -23,4 +25,22 @@
 }
 .retate {
     transform: rotate(180deg);
+}
+.controls {
+    z-index: 20;
+    position: absolute;
+    background-color: #ffffff20;
+    backdrop-filter: blur(10px);
+    left: 20px;
+    bottom: 20px;
+    width: 300px;
+    height: 50px;
+    border-radius: 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+.bg {
+    background-color: red;
 }
